feat(website,api-server,openapi): refactor API definition
- Change GameState type so type itself makes invalid states
unrepresentable
- Rename /play-actions/ to /expedition/
- Add components for dice rolling and diceSlice redux
