# api-server/src/app.ts
@@ -4,6 +4,7 @@ import 'express-async-errors'
 import addSessionMiddleware from './addSessionMiddleware'
 import loginRouter from './routes/login'
 import rootRouter from './routes/root'
+import gameStateRouter from './routes/game-state'
 
 export const app: Express = express()
 
@@ -25,3 +26,4 @@ addSessionMiddleware(app)
 
 app.use('/', rootRouter)
 app.use('/login', loginRouter)
+app.use('/game-state', gameStateRouter)
